# phantoom-roootkit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  binding.gyp  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
asm/: entropy_calc.asm  linux_proc.asm  md5_engine.asm  process_enum.asm  syscall_wrapper.asm
scripts/: build-asm.js
src/app/: main.js  preload.js
src/bridge/: asm_bridge.cpp  asm_bridge.h  elf_parser.cpp  elf_parser.h  file_scanner.cpp  file_scanner.h  graph_builder.cpp  graph_builder.h  napi_bindings.cpp  pe_parser.cpp  pe_parser.h  process_diff.cpp  process_diff.h  vt_client.cpp  vt_client.h
src/ui/: App.tsx  index.html  index.tsx
src/ui/components/: Dashboard.tsx  GraphView.tsx  exports.ts  index.tsx
src/ui/store/: scanStore.ts
src/ui/styles/: app.css
tests/e2e/: app.spec.ts
tests/integration/: test_process_diff.cpp
tests/unit/: test_entropy.cpp  test_md5.cpp
